<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="358dp"
        android:layout_height="132dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="29dp"
        android:textSize="30sp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="362dp"
        android:layout_height="88dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="168dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/pantalla">

        <Button
            android:id="@+id/division"
            android:layout_width="90.50dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:text="@string/Division"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,MissingConstraints,TextContrastCheck" />

        <Button
            android:id="@+id/suma"
            android:layout_width="90.50dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:text="@string/sum"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,MissingConstraints,TextContrastCheck" />

        <Button
            android:id="@+id/restas"
            android:layout_width="90.50dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:text="@string/res"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,MissingConstraints,TextContrastCheck" />

        <Button
            android:id="@+id/multiplicacion"
            android:layout_width="90.50dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:text="@string/multi"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,MissingConstraints,TextContrastCheck,VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="123dp"
        android:layout_height="365dp"
        android:orientation="vertical"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/num7"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:text="@string/numero7"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/num4"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:text="@string/numero4"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:text="@string/numero1"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="124dp"
        android:layout_height="365dp"
        android:orientation="vertical"
        android:paddingRight="10dp"
        app:layout_constraintStart_toEndOf="@id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry">

        <Button
            android:id="@+id/num8"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:text="@string/numero8"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/num5"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:text="@string/numero5"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:text="@string/numero2"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="112dp"
        android:layout_height="367dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="263dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        app:layout_constraintStart_toEndOf="@id/linearLayout3">

        <Button
            android:id="@+id/num9"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:textSize="25sp"
            android:text="@string/numero9"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/num6"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:textSize="25sp"
            android:text="@string/numero6"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/num3"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:backgroundTint="@color/grey"
            android:textSize="25sp"
            android:text="@string/numero3"
            tools:ignore="MissingConstraints"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="640dp">

        <Button
            android:id="@+id/num0"
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/grey"
            android:text="@string/numero0"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,MissingConstraints"/>

        <Button
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:text="@string/igual"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,MissingConstraints,TextContrastCheck" />

        <Button

            android:id="@+id/resetear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:text="@string/borrar"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,MissingConstraints,TextContrastCheck" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>